fix: editor content being hidden under keyboard on mobile (#1410)

--- a/packages/web/src/stylesheets/_columns.scss
+++ b/packages/web/src/stylesheets/_columns.scss
@@ -21,7 +21,6 @@
       flex-grow: 1;
 
       .content {
-        height: 100%;
         overflow-y: auto;
       }
     }
